--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -7,7 +7,7 @@
 			<div class="info">
 				<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 					<span>
-						Hizrian
+						Arda
 						<span class="user-level">Administrator</span>
 						<span class="caret"></span>
 					</span>
@@ -18,17 +18,17 @@
 					<ul class="nav">
 						<li>
 							<a href="#profile">
-								<span class="link-collapse">My Profile</span>
+								<span class="link-collapse">Menüyü Gör</span>
 							</a>
 						</li>
 						<li>
 							<a href="#edit">
-								<span class="link-collapse">Edit Profile</span>
+								<span class="link-collapse">Şifre Güncelle</span>
 							</a>
 						</li>
 						<li>
 							<a href="#settings">
-								<span class="link-collapse">Settings</span>
+								<span class="link-collapse">Ayarlar</span>
 							</a>
 						</li>
 					</ul>
@@ -39,56 +39,86 @@
 			<li class="nav-item">
 				<a href="index.html">
 					<i class="la la-dashboard"></i>
-					<p>Dashboard</p>
+					<p>Menüyü Gör</p>
 					<span class="badge badge-count">5</span>
 				</a>
 			</li>
 			<li class="nav-item">
 				<a href="components.html">
 					<i class="la la-table"></i>
-					<p>Components</p>
+					<p>Kategoriler</p>
 					<span class="badge badge-count">14</span>
 				</a>
 			</li>
 			<li class="nav-item">
 				<a href="forms.html">
 					<i class="la la-keyboard-o"></i>
-					<p>Forms</p>
+					<p>Ürünler</p>
 					<span class="badge badge-count">50</span>
 				</a>
 			</li>
 			<li class="nav-item active">
 				<a href="tables.html">
 					<i class="la la-th"></i>
-					<p>Tables</p>
+					<p>Rezervasyonlar</p>
 					<span class="badge badge-count">6</span>
 				</a>
 			</li>
 			<li class="nav-item">
 				<a href="notifications.html">
 					<i class="la la-bell"></i>
-					<p>Notifications</p>
+					<p>Hakkımızda</p>
 					<span class="badge badge-success">3</span>
 				</a>
 			</li>
 			<li class="nav-item">
 				<a href="typography.html">
 					<i class="la la-font"></i>
-					<p>Typography</p>
+					<p>Mesajlar</p>
 					<span class="badge badge-danger">25</span>
 				</a>
 			</li>
 			<li class="nav-item">
 				<a href="icons.html">
 					<i class="la la-fonticons"></i>
-					<p>Icons</p>
+					<p>İndirimler</p>
 				</a>
 			</li>
-			<li class="nav-item update-pro">
-				<button data-toggle="modal" data-target="#modalUpdate">
-					<i class="la la-hand-pointer-o"></i>
-					<p>Update To Pro</p>
-				</button>
+			<li class="nav-item">
+				<a href="icons.html">
+					<i class="la la-fonticons"></i>
+					<p>Öne Çıkanlar</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="icons.html">
+					<i class="la la-fonticons"></i>
+					<p>Referanslar</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="icons.html">
+					<i class="la la-fonticons"></i>
+					<p>Sosyal Medya</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="icons.html">
+					<i class="la la-fonticons"></i>
+					<p>İstatistikler</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="icons.html">
+					<i class="la la-fonticons"></i>
+					<p>Ayarlar</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="icons.html">
+					<i class="la la-fonticons"></i>
+					<p>Çıkış Yap</p>
+				</a>
 			</li>
 		</ul>
 	</div>
