--- a/SignalRWebUI/Views/Category/Index.cshtml
+++ b/SignalRWebUI/Views/Category/Index.cshtml
@@ -36,14 +36,14 @@
 										<td>@item.CategoryID</td>
 										<td>@item.CategoryName</td>
 										<td>@item.CategoryStatus</td>
-										<td><a href="" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="" class="btn btn-outline-warning">Güncelle</a></td>
+										<td><a href="/Category/DeleteCategory/@item.CategoryID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Category/UpdateCategory/@item.CategoryID" class="btn btn-outline-warning">Güncelle</a></td>
 									</tr>
 								}
 
 							</tbody>
 						</table>
-						<a href="" class="btn btn-outline-info">Yeni Kategori Girişi</a>
+						<a href="/Category/CreateCategory" class="btn btn-outline-info">Yeni Kategori Girişi</a>
 
 					</div>
 				</div>
