updatecategory dropdown status secenekleri eklendi

--- a/SignalRWebUI/Views/Category/UpdateCategory.cshtml
+++ b/SignalRWebUI/Views/Category/UpdateCategory.cshtml
@@ -5,6 +5,16 @@
 }
 
 @model UpdateCategoryDto
+
+@{
+    //Dropdown için "Aktif" ve "Pasif" seçeneklerini hazırlıyoruz
+    var statusOptions = new List<SelectListItem>
+    {
+        new SelectListItem { Value = "true", Text = "Aktif" },
+        new SelectListItem { Value = "false", Text = "Pasif" }
+    };
+}
+
 <div class="content">
     <div class="container-fluid">
         <h4 class="page-title">Forms</h4>
@@ -20,6 +30,11 @@
                             <div class="form-group">
                                 <label for="categoryname">Yeni Kategori Adı:</label>
                                 <input type="text" class="form-control" id="categoryname" asp-for="CategoryName" placeholder="@Model.CategoryName">
+
+                                <div class="form-group">
+                                    <label asp-for="CategoryStatus">Kategori Durumu:</label>
+                                    <select class="form-control" asp-for="CategoryStatus" asp-items="statusOptions"></select>
+                                </div>
                             </div>
                         </div>
                         <div class="card-action">
