--- a/SignalRWebUI/Views/Product/CreateProduct.cshtml
+++ b/SignalRWebUI/Views/Product/CreateProduct.cshtml
@@ -19,7 +19,7 @@
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="productname">Kategori Adı:</label>
+                                <label for="productname">Ürün Adı:</label>
                                 <input type="text" class="form-control" id="productname" asp-for="ProductName" placeholder="Ürün Adını Giriniz">
                                 <br />
                                 <label for="productdescription">Ürün Açıklaması:</label>
