--- a/SignalRWebUI/Views/Product/Index.cshtml
+++ b/SignalRWebUI/Views/Product/Index.cshtml
@@ -41,8 +41,8 @@
 										<td>@item.ProductStatus</td>
 										<td>@item.CategoryName</td>
 
-										<td><a href="/Category/DeleteProduct/@item.ProductID" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="/Category/UpdateProduct/@item.ProductID" class="btn btn-outline-warning">Güncelle</a></td>
+										<td><a href="/Product/DeleteProduct/@item.ProductID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Product/UpdateProduct/@item.ProductID" class="btn btn-outline-warning">Güncelle</a></td>
 									</tr>
 								}
 
