tüm controller dto ve viewler bitti, sıra signalde

--- a/SignalRWebUI/Views/Discount/CreateDiscount.cshtml
+++ b/SignalRWebUI/Views/Discount/CreateDiscount.cshtml
@@ -25,7 +25,7 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label for="Amount">Ürün İndirim Oranını Giriniz</label>
-                                <input type="text" class="form-control" asp-for="Amount" id="Amount">
+                                <input type="number" class="form-control" asp-for="Amount" id="Amount">
                             </div>
                         </div>
                         <div class="card-body">
