--- a/SignalRWebUI/Views/Discount/Index.cshtml
+++ b/SignalRWebUI/Views/Discount/Index.cshtml
@@ -31,7 +31,7 @@
 							<tbody>
 								@foreach (var item in Model)
 								{
-
+									count++;//id değil de sırasıyla gözüksün diye
 									<tr>
 										<th>@count</th>
 										<td>@item.DiscountTitle</td>
