--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -40,7 +40,6 @@
 				<a href="index.html">
 					<i class="la la-dashboard"></i>
 					<p>Menüyü Gör</p>
-					<span class="badge badge-count">5</span>
 				</a>
 			</li>
 			<li class="nav-item">
@@ -53,14 +52,12 @@
 				<a href="/Product/Index">
 					<i class="la la-keyboard-o"></i>
 					<p>Ürünler</p>
-					<span class="badge badge-count">50</span>
 				</a>
 			</li>
-			<li class="nav-item active">
+			<li class="nav-item">
 				<a href="/Booking/Index">
 					<i class="la la-th"></i>
 					<p>Rezervasyonlar</p>
-					<span class="badge badge-count">6</span>
 				</a>
 			</li>
 			<li class="nav-item">
@@ -73,7 +70,6 @@
 				<a href="/Contact/Index">
 					<i class="la la-font"></i>
 					<p>İletişim</p>
-					<span class="badge badge-danger">25</span>
 				</a>
 			</li>
 			<li class="nav-item">
@@ -83,7 +79,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="/Features/Index">
+				<a href="/Feature/Index">
 					<i class="la la-fonticons"></i>
 					<p>Öne Çıkanlar</p>
 				</a>
