--- a/SignalRWebUI/Views/Contact/Index.cshtml
+++ b/SignalRWebUI/Views/Contact/Index.cshtml
@@ -22,6 +22,8 @@
 						<table class="table mt-3">
 							<thead>
 								<tr>
+									<th scope="col">#</th>
+
 									<th scope="col">Telefon</th>
 									<th scope="col">Mail</th>
 									<th scope="col">Açıklama</th>
@@ -33,6 +35,7 @@
 								@foreach (var item in Model)
 								{
 									<tr>
+										<td>@item.ContactID</td>
 										<td>@item.Phone</td>
 										<td>@item.ContactMail</td>
 										<td>@item.FooterDescription</td>
