--- a/SignalRWebUI/Views/Feature/Index.cshtml
+++ b/SignalRWebUI/Views/Feature/Index.cshtml
@@ -1,8 +1,60 @@
-﻿
+﻿@using SignalRWebUI.Dtos.FeatureDtos
+@model List<ResultFeatureDto>
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/AdminLayout/Index.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h1>Index</h1>
+<div class="content">
+	<div class="container-fluid">
+		<h4 class="page-title">Ana Sayfa Öne Çıkan İşlemleri</h4>
+		<div class="row">
+			<div class="col-md-12">
 
+				<div class="card">
+					<div class="card-header">
+						<div class="card-title">Öne Çıkan Listesi</div>
+					</div>
+					<div class="card-body">
+						<div class="card-sub">
+							Öne Çıkan alanıyla ilgili işlemleri yapabilirsiniz.
+						</div>
+						<table class="table mt-3">
+							<thead>
+								<tr>
+									<th scope="col">Başlık1</th>
+									<th scope="col">Başlık2</th>
+									<th scope="col">Başlık3</th>
+
+									<th scope="col">Açıklama1</th>
+									<th scope="col">Açıklama2</th>
+									<th scope="col">Açıklama3</th>
+
+
+									<th scope="col">Sil</th>
+									<th scope="col">Güncelle</th>
+								</tr>
+							</thead>
+							<tbody>
+								@foreach (var item in Model)
+								{
+									<tr>
+										<td scope="col">@item.Title1</td>
+										<td scope="col">@item.Title2</td>
+										<td scope="col">@item.Title3</td>
+										<td scope="col">@item.Description1</td>
+										<td scope="col">@item.Description2</td>
+										<td scope="col">@item.Description3</td>
+										<td><a href="/Feature/DeleteFeature/@item.FeatureID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Feature/UpdateFeature/@item.FeatureID" class="btn btn-outline-success">Güncelle</a></td>
+									</tr>
+								}
+							</tbody>
+						</table>
+						<a href="/Feature/CreateFeature/" class="btn btn-outline-primary">Yeni Öne Çıkan Yazısı Girişi</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
