--- a/SignalRWebUI/Views/Testimonial/Index.cshtml
+++ b/SignalRWebUI/Views/Testimonial/Index.cshtml
@@ -26,6 +26,7 @@
                                     <th scope="col">#</th>
                                     <th scope="col">Ad Soyad</th>
                                     <th scope="col">Durum</th>
+                                    <th scope="col">Yorum</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
                                 </tr>
@@ -38,6 +39,7 @@
                                         <th>@count</th>
                                         <td>@item.TestimonialName</td>
                                         <td>@item.TestimonialStatus</td>
+                                        <td>@item.Comment</td>
                                         <td><a href="/Testimonial/DeleteTestimonial/@item.TestimonialID" class="btn btn-outline-danger">Sil</a></td>
                                         <td><a href="/Testimonial/UpdateTestimonial/@item.TestimonialID" class="btn btn-outline-success">Güncelle</a></td>
                                     </tr>
